fix(slide04): align footnote to left edge of content block

--- a/src/components/slides/SlideV2_04.css
+++ b/src/components/slides/SlideV2_04.css
@@ -38,8 +38,8 @@
 .s04-footnote {
     position: absolute;
     top: 1250px;
-    left: 179px;
-    width: 722px;
+    left: 100px;
+    width: 880px;
     font-family: 'Lato', sans-serif;
     font-size: 32px;
     font-weight: 400;
